add infinite scroll and search results view

--- a/application/public/index.html
+++ b/application/public/index.html
@@ -29,6 +29,7 @@
 
     <link href="/bower_components/angular-growl-v2/build/angular-growl.css" rel="stylesheet">
     <script src="/bower_components/angular-growl-v2/build/angular-growl.js"></script>
+    <script type='text/javascript' src='/lib/ng-infinite-scroll.js'></script>
 
     <!-- controllers -->
     <script src="app/controllers/mainCtrl.js"></script>
