scraping method in script files

--- a/application/public/index.html
+++ b/application/public/index.html
@@ -669,7 +669,8 @@
 										<!--Submenu-->
 										<ul class="collapse in">
                                             <li><a href="/users"><i class="fa fa-user"></i>Users</a></li>
-                                            <li><a href="/searches"><i class="fa fa-search"></i>Seach</a></li>
+                                            <li><a href="/searches/mine"><i class="fa fa-search"></i>My searches</a></li>
+
                                             <li><a href="/test"><i class="fa fa-info"></i>test</a></li>
 
 
