--- a/application/public/index.html
+++ b/application/public/index.html
@@ -36,12 +36,17 @@
     <script src="app/controllers/userCtrl.js"></script>
     <script src="app/controllers/searchCtrl.js"></script>
     <script src="app/controllers/testCtrl.js"></script>
+    <script src="app/controllers/chatCtrl.js"></script>
+
 
     <!-- services -->
     <script src="app/services/authService.js"></script>
     <script src="app/services/userService.js"></script>
     <script src="app/services/searchService.js"></script>
     <script src="app/services/testService.js"></script>
+
+    <script src="lib/socket.io-1.3.4.js"></script>
+
 
     <!-- main Angular app files -->
     <script src="app/app.routes.js"></script>
@@ -671,6 +676,7 @@
                                             <li><a href="/users"><i class="fa fa-user"></i>Users</a></li>
                                             <li><a href="/searches/mine"><i class="fa fa-search"></i>My searches</a></li>
 
+                                            <li><a href="/chat"><i class="fa fa-user"></i>Chat</a></li>
                                             <li><a href="/test"><i class="fa fa-info"></i>test</a></li>
 
 
