web sockets chat and poll (OK)

--- a/application/public/index.html
+++ b/application/public/index.html
@@ -21,7 +21,7 @@
 
 	<script src="plugins/pace/pace.min.js"></script>
 
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.1.1/animate.min.css">
+    <link rel="stylesheet" href="css/animate.min.css">
     <script src="angularjs-1.3.8/angular.js"></script>
     <script src="angularjs-1.3.8/angular-route.js"></script>
     <script src="angularjs-1.3.8/angular-animate.js"></script>
@@ -677,6 +677,8 @@
                                             <li><a href="/searches/mine"><i class="fa fa-search"></i>My searches</a></li>
 
                                             <li><a href="/chat"><i class="fa fa-user"></i>Chat</a></li>
+                                            <li><a href="/vote"><i class="fa fa-question-sign"></i>Poll</a></li>
+
                                             <li><a href="/test"><i class="fa fa-info"></i>test</a></li>
 
 
